<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.camivets.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.camivets.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.camivets.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_sedes"
        android:name="com.example.camivets.ui.sedes.SedesFragment"
        android:label="@string/menu_sedes"
        tools:layout="@layout/fragment_sedes"/>

    <fragment
        android:id="@+id/nav_veterinarias"
        android:name="com.example.camivets.ui.veterinarias.VeterinariasFragment"
        android:label="@string/menu_veterinarias"
        tools:layout="@layout/fragment_veterinarias"/>

    <fragment
        android:id="@+id/nav_planes"
        android:name="com.example.camivets.ui.planes.PlanesFragment"
        android:label="@string/menu_planes"
        tools:layout="@layout/fragment_planes"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.camivets.ui.profile.ProfileFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/nav_sedeDatail"
        android:name="com.example.camivets.ui.sedes.SedeDatailFragment"
        android:label="Detalle Veterinaria"
        tools:layout="@layout/fragment_sede_datail" />
</navigation>